# microcodec

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  microcodec_agent_guide.md  microcodec_finalization.md  microcodec_spec.md
.github/: PULL_REQUEST_TEMPLATE.md  release.yml  repository-metadata.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api-dispatch.md  architecture.md  index.md  publishing-checklist.md  release-process.md
include/: microcodec.h
src/: mc_delta.c  mc_huff.c  mc_lzss.c  mc_rle.c  mc_varint.c  microcodec.c
tests/: test_delta.c  test_huff.c  test_integration.c  test_lzss.c  test_rle.c  test_varint.c
wiki/: Algorithms.md  Build-and-test.md  Home.md  Integration-with-microdb.md  Release-checklist.md
